os process collector - fixes after code review